# Space_Duel

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  equipment.json  mypy.ini  project_tree.txt  pyproject.toml  requirements.runtime.txt  requirements.txt  wsgi.py
.github/workflows/: ci.yml  docker.yml  release.yml
.hypothesis/constants/: 0bf7bed13ec821f3  1ca27281d0aa0bcb  20033a53d438f0b4  212f8c448e690d54  2223791ce52fa50a  270454c8c35d8d6e  2eadebd5878813af  41046fa80095e67b  443286482ed09bef  4f5183ae7f318575  5b778ea01e1ca310  5f8315742a23be2f  61ec312e7f1385da  62f544cdde803041  6f08917ed5f6cd2b  796c9aa25e43e699  9459e787ef1a8d12  95c120d2132df47d  9c78fd0e06b0cfb4  9d7a17e0a70e6513  a141c6a803b16219  a73e7e2cd5beced7  b54520345e40c696  b5aa90b8006be0d9  bbedfd0cbe851d4d  cbf8c5ad575ff8d8  d5c9d735f74343e3  ec974f7a90192076  ed03dd9e5ec6c0bd  fedcc782106ae75b
.hypothesis/examples/04e6b3400353b141/: 19c99dba18c5c5c1  fc62cab37e25dc21
.hypothesis/examples/19c99dba18c5c5c1/: a26fb463fb6907f1
.hypothesis/examples/fc62cab37e25dc21/: 03728932c613e2c6  32f5bf183544bae0  3685ecd3c6c732ce  39a69b5792a16b1b  43a6d065e0c40271  50d5811f03eeac43  8d72c8bc4e84e762  b0298a9c54a9d2ae  e99a9c3b969d9953  f7cef475f2db3175
app/: __init__.py  arena.py  classes.py  config.py  equipment.py  health.py  skills.py  stats.py  unit.py  web.py
infra/docker/: Dockerfile
infra/nginx/: nginx.conf
static/: styles.css
templates/: _stats_box.html  base.html  choose_enemy.html  choose_hero.html  fight.html  ui_fight.html  ui_panel_full.html
templates/partials/: _battle_panel.html  _stats_oob.html  _telemetry_oob.html  fight_panel.html
tests/: test_ai_smart.py  test_ai_strategy.py  test_arena_ai_skill.py  test_arena_basic.py  test_arena_cooldowns_and_energy.py  test_arena_hull_never_regens.py  test_arena_one_turn.py  test_arena_pass_and_reset.py  test_arena_skills_effects.py  test_basic_attack_properties.py  test_equipment_balance.py  test_equipment_load.py  test_skills_basic.py  test_smoke.py  test_stats.py  test_unit_attack_edges.py  test_unit_attack_interface.py  test_unit_attack_numbers.py  test_unit_attack_properties.py  test_unit_factory.py  test_unit_no_energy.py  test_web_flow.py  test_web_smoke.py
